--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,6 +52,6 @@ deploy:jdk13:
         then echo "CI settings missing\! If deploying to GitLab Maven Repository, please see https://docs.gitlab.com/ee/user/project/packages/maven_repository.html#creating-maven-packages-with-gitlab-cicd for instructions.";
       fi
     - 'mvn clean install'
-    - 'bash <(curl -s https://codecov.io/bash)'
+    - 'bash <(curl -s https://codecov.io/bash) -t $CODECOV_TOKEN'
   only:
     - master
