--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,8 +22,8 @@ variables:
   CODACY_PROJECT_TOKEN: $CODACY_PROJECT_TOKEN
 
 
-# This template uses jdk13 for verifying and deploying images
-image: maven:3.6.3-jdk-13
+# This template uses jdk16 for verifying and deploying images
+image: maven:3.8.1-openjdk-16
 
 # Cache downloaded dependencies and plugins between builds.
 # To keep cache across branches add 'key: "$CI_JOB_NAME"'
@@ -40,15 +40,15 @@ cache:
   except:
     - master
 
-# Verify merge requests using JDK13
-verify:jdk13:
+# Verify merge requests using JDK16
+verify:jdk16:
   <<: *verify
 
 # To deploy packages from CI, create a ci_settings.xml file
 # For deploying packages to GitLab's Maven Repository: See https://docs.gitlab.com/ee/user/project/packages/maven_repository.html#creating-maven-packages-with-gitlab-cicd for more details.
 # Please note: The GitLab Maven Repository is currently only available in GitLab Premium / Ultimate.
 # For `master` branch run `mvn deploy` automatically.
-deploy:jdk13:
+deploy:jdk16:
   stage: deploy
   script:
     - if [ ! -f ci_settings.xml ];
