--- a/favourite-lyrics-starter/src/main/resources/application.properties
+++ b/favourite-lyrics-starter/src/main/resources/application.properties
@@ -1,15 +1,16 @@
-# h2
-spring.h2.console.path=/spring-h2-favourite-lyrics-console
-spring.h2.console.enabled=true
-# datasource
-spring.datasource.url=jdbc:h2:file:~/spring-datasource-favourite-lyrics-url
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=sa
-spring.datasource.initialization-mode=always
-spring.datasource.schema=classpath:schema.sql
-spring.datasource.data=classpath:data.sql
-# hibernate
+# Postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/fla?currentSchema=hexadecimal
+spring.datasource.username=postgres
+spring.datasource.password=admin
+#spring.sql.init.mode=always
+#spring.sql.init.schema-locations=classpath:db/schema.sql
+#spring.sql.init.data-locations=classpath:db/data.sql
+# Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+# Flyway
+spring.flyway.url=${spring.datasource.url}
+spring.flyway.user=${spring.datasource.username}
+spring.flyway.password=${spring.datasource.password}
+spring.flyway.locations=classpath:/db
