📜 Converts everything to use UUID

--- a/.env
+++ b/.env
@@ -10,6 +10,6 @@ FLA_NGINX_IP=192.168.0.25
 
 NETWORK_SUBNET=192.168.0.0/24
 
-DB_USER=postgres
-DB_PASSWORD=admin
-DB_DATABASE=fla
+POSTGRES_USER=fla
+POSTGRES_PASSWORD=admin
+POSTGRES_MULTIPLE_DATABASES=fla
