--- a/favourite-lyrics-starter/src/main/resources/application-docker.properties
+++ b/favourite-lyrics-starter/src/main/resources/application-docker.properties
@@ -2,9 +2,12 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/fla?currentSchema=hexadecimal
 spring.datasource.username=postgres
 spring.datasource.password=admin
-spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath:schema.sql
-spring.sql.init.data-locations=classpath:data.sql
+spring.sql.init.mode=never
 # Hibernate
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+# Flyway
+spring.flyway.url=${spring.datasource.url}
+spring.flyway.user=${spring.datasource.username}
+spring.flyway.password=${spring.datasource.password}
+spring.flyway.locations=classpath:/db
