🌿 Fly the way into docker

--- a/favourite-lyrics-starter/pom.xml
+++ b/favourite-lyrics-starter/pom.xml
@@ -101,6 +101,11 @@
                     </execution>
                 </executions>
             </plugin>
+                <plugin>
+                    <groupId>org.flywaydb</groupId>
+                    <artifactId>flyway-maven-plugin</artifactId>
+                    <version>4.0.3</version>
+                </plugin>
         </plugins>
     </build>
 
