--- a/favourite-lyrics-starter/src/main/resources/application.properties
+++ b/favourite-lyrics-starter/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/fla?currentSchema=hexadecimal
-spring.datasource.username=postgres
+spring.datasource.username=fla
 spring.datasource.password=admin
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
@@ -8,3 +8,5 @@ spring.sql.init.data-locations=classpath:data.sql
 # Hibernate
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+# Flyway
+spring.flyway.enabled=false
