--- a/favourite-lyrics-starter/src/main/resources/application-docker.properties
+++ b/favourite-lyrics-starter/src/main/resources/application-docker.properties
@@ -1,12 +1,14 @@
 # Postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/fla?currentSchema=hexadecimal
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://192.168.0.11:5432/fla?currentSchema=hexadecimal
+spring.datasource.username=fla
 spring.datasource.password=admin
 spring.sql.init.mode=never
 # Hibernate
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 # Flyway
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
 spring.flyway.url=${spring.datasource.url}
 spring.flyway.user=${spring.datasource.username}
 spring.flyway.password=${spring.datasource.password}
