--- a/favourite-lyrics-gui/nginx/default.conf
+++ b/favourite-lyrics-gui/nginx/default.conf
@@ -11,16 +11,11 @@ server {
         try_files $uri $uri/ /index.html?$args;
     }
 
-    location /result {
-        root   /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html?$args;
-    }
-
-    location /api/fla/ {
+    location /lyrics/ {
      proxy_pass http://${FLA_BACKEND}:8080;
     }
 
-    location /api/fla/broker {
+    location /lyrics/broker {
       proxy_pass http://${FLA_BACKEND}:8080;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
