--- a/favourite-lyrics-gui/package.json
+++ b/favourite-lyrics-gui/package.json
@@ -9,8 +9,12 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
+    "@types/react-cache": "^2.0.1",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.24.0",
     "react": "^17.0.2",
+    "react-async": "^10.0.1",
+    "react-cache": "^2.0.0-alpha.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
@@ -39,5 +43,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:8081"
 }
