--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <spring-boot-starter-parent.version>2.6.1</spring-boot-starter-parent.version>
         <flyway-core.version>8.1.0</flyway-core.version>
         <postgresql.version>42.2.24</postgresql.version>
+        <omni-coveragereporter-maven-plugin.version>0.0.4</omni-coveragereporter-maven-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -114,16 +115,9 @@
                     </executions>
                 </plugin>
                 <plugin>
-                    <groupId>org.eluder.coveralls</groupId>
-                    <artifactId>coveralls-maven-plugin</artifactId>
-                    <version>${coveralls-maven-plugin.version}</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>javax.xml.bind</groupId>
-                            <artifactId>jaxb-api</artifactId>
-                            <version>${jaxb-api.version}</version>
-                        </dependency>
-                    </dependencies>
+                    <groupId>org.jesperancinha.plugins</groupId>
+                    <artifactId>omni-coveragereporter-maven-plugin</artifactId>
+                    <version>${omni-coveragereporter-maven-plugin.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
