--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,17 +3,34 @@ include:
     file: '.gitlab-ci.yml'
 
 variables:
-  # This will suppress any download for dependencies and plugins or upload messages which would clutter the console log.
-  # `showDateTime` will show the passed time in milliseconds. You need to specify `--batch-mode` to make this work.
   MAVEN_OPTS: "-Dhttps.protocols=TLSv1.2 -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN -Dorg.slf4j.simpleLogger.showDateTime=true -Djava.awt.headless=true"
-  # As of Maven 3.3.0 instead of this you may define these options in `.mvn/maven.config` so the same config is used
-  # when running from the command line.
-  # `installAtEnd` and `deployAtEnd` are only effective with recent version of the corresponding plugins.
   MAVEN_CLI_OPTS: "--batch-mode --errors --fail-at-end --show-version -DinstallAtEnd=true -DdeployAtEnd=true"
   CODECOV_TOKEN: $CODECOV_TOKEN
   COVERALLS_TOKEN: $COVERALLS_TOKEN
   CODACY_PROJECT_TOKEN: $CODACY_PROJECT_TOKEN
+  DEPENDABOT_IMAGE: docker.io/andrcuns/dependabot-gitlab:0.12.0
 
+.dependabot-gitlab:
+  image:
+    name: $DEPENDABOT_IMAGE
+    entrypoint: [""]
+  variables:
+    GIT_STRATEGY: none
+    RAILS_ENV: production
+    PACKAGE_MANAGER: $CI_JOB_NAME
+    SETTINGS__GITLAB_URL: $CI_SERVER_URL
+    SETTINGS__STANDALONE: "true"
+  before_script:
+    - cd /home/dependabot/app
+  script:
+    - bundle exec rake "dependabot:update[$PROJECT_PATH,$PACKAGE_MANAGER,$DIRECTORY]"
+
+maven:
+  extends: .dependabot-gitlab
+  rules:
+    - if: $DEPENDENCY_UPDATES_DISABLED
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "schedule" && $PACKAGE_MANAGER_SET =~ /\bmaven\b/'
 
 # This template uses jdk17 for verifying and deploying images
 image: maven:3.8.1-openjdk-17
