--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,75 +1,61 @@
-stages:
-  - build
-  - test
+# This file is a template, and might need editing before it works on your project.
+# Build JAVA applications using Apache Maven (http://maven.apache.org)
+# For docker image tags see https://hub.docker.com/_/maven/
+#
+# For general lifecycle information see https://maven.apache.org/guides/introduction/introduction-to-the-lifecycle.html
 
-image: docker:latest
-
-build-image:
-  stage: build
-  script:
-    - docker build -t "dependabot/dependabot-script" -f .gitlab/Dockerfile .
+# This template will build and test your projects
+# * Caches downloaded dependencies and plugins between invocation.
+# * Verify but don't deploy merge requests.
+# * Deploy built artifacts from master branch only.
 
 variables:
+  # This will suppress any download for dependencies and plugins or upload messages which would clutter the console log.
+  # `showDateTime` will show the passed time in milliseconds. You need to specify `--batch-mode` to make this work.
   MAVEN_OPTS: "-Dhttps.protocols=TLSv1.2 -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN -Dorg.slf4j.simpleLogger.showDateTime=true -Djava.awt.headless=true"
+  # As of Maven 3.3.0 instead of this you may define these options in `.mvn/maven.config` so the same config is used
+  # when running from the command line.
+  # `installAtEnd` and `deployAtEnd` are only effective with recent version of the corresponding plugins.
   MAVEN_CLI_OPTS: "--batch-mode --errors --fail-at-end --show-version -DinstallAtEnd=true -DdeployAtEnd=true"
   CODECOV_TOKEN: $CODECOV_TOKEN
   COVERALLS_TOKEN: $COVERALLS_TOKEN
   CODACY_PROJECT_TOKEN: $CODACY_PROJECT_TOKEN
-  DEPENDABOT_IMAGE: docker.io/andrcuns/dependabot-gitlab:0.12.0
 
-.dependabot-gitlab:
-  image:
-    name: $DEPENDABOT_IMAGE
-    entrypoint: [""]
-  variables:
-    GIT_STRATEGY: none
-    RAILS_ENV: production
-    PACKAGE_MANAGER: $CI_JOB_NAME
-    SETTINGS__GITLAB_URL: $CI_SERVER_URL
-    SETTINGS__STANDALONE: "true"
-  before_script:
-    - cd /home/dependabot/app
-  script:
-    - bundle exec rake "dependabot:update[$PROJECT_PATH,$PACKAGE_MANAGER,$DIRECTORY]"
 
+# This template uses jdk17 for verifying and deploying images
+image: maven:3.8.1-openjdk-17
+
+# Cache downloaded dependencies and plugins between builds.
+# To keep cache across branches add 'key: "$CI_JOB_NAME"'
 cache:
   paths:
     - .m2/repository
 
-.dependabot:
-  image: dependabot/dependabot-script
-  variables:
-    PACKAGE_MANAGER: $CI_JOB_NAME
-  script:
-    - bundle exec ruby ./generic-update-script.rb
-  only:
-    - schedules
-
-maven:
-  extends: .dependabot-gitlab
-  rules:
-    - if: $DEPENDENCY_UPDATES_DISABLED
-      when: never
-    - if: '$CI_PIPELINE_SOURCE == "schedule" && $PACKAGE_MANAGER_SET =~ /\bmaven\b/'
-
-build:
-  image: maven:3.8.1-openjdk-17
-  stage: build
-  script:
-    - if [ ! -f ci_settings.xml ];
-        then echo "CI settings missing\! If deploying to GitLab Maven Repository, please see https://docs.gitlab.com/ee/user/project/packages/maven_repository.html#creating-maven-packages-with-gitlab-cicd for instructions.";
-      fi
-    - 'mvn clean install jacoco:prepare-agent package jacoco:report'
-    - 'mvn omni-coveragereporter:report'
-    - 'bash <(curl -s https://codecov.io/bash) -t $CODECOV_TOKEN'
-    - 'bash <(curl -Ls https://coverage.codacy.com/get.sh) report -l Java $(find **/jacoco*.xml -printf ''-r %p '')'
-  only:
-    - master
-
-verify:
-  image: maven:3.8.1-openjdk-17
+# For merge requests do not `deploy` but only run `verify`.
+# See https://maven.apache.org/guides/introduction/introduction-to-the-lifecycle.html
+.verify: &verify
   stage: test
   script:
     - 'mvn $MAVEN_CLI_OPTS verify'
   except:
+    - master
+
+# Verify merge requests using JDK17
+verify:jdk17:
+  <<: *verify
+
+# To deploy packages from CI, create a ci_settings.xml file
+# For deploying packages to GitLab's Maven Repository: See https://docs.gitlab.com/ee/user/project/packages/maven_repository.html#creating-maven-packages-with-gitlab-cicd for more details.
+# Please note: The GitLab Maven Repository is currently only available in GitLab Premium / Ultimate.
+# For `master` branch run `mvn deploy` automatically.
+deploy:jdk17:
+  stage: deploy
+  script:
+    - if [ ! -f ci_settings.xml ];
+        then echo "CI settings missing\! If deploying to GitLab Maven Repository, please see https://docs.gitlab.com/ee/user/project/packages/maven_repository.html#creating-maven-packages-with-gitlab-cicd for instructions.";
+      fi
+    - 'mvn clean install coveralls:report -Dconsolerizer.show=false -DrepoToken=${COVERALLS_TOKEN}'
+    - 'bash <(curl -s https://codecov.io/bash) -t $CODECOV_TOKEN'
+    - 'bash <(curl -Ls https://coverage.codacy.com/get.sh) report -l Java $(find **/jacoco*.xml -printf ''-r %p '')'
+  only:
     - master
