--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,8 +51,8 @@ deploy:jdk17-pull-request:
         then echo "CI settings missing\! If deploying to GitLab Maven Repository, please see https://docs.gitlab.com/ee/user/project/packages/maven_repository.html#creating-maven-packages-with-gitlab-cicd for instructions.";
       fi
     - 'mvn clean install jacoco:prepare-agent package jacoco:report'
-  only:
-    - branches
+  except:
+    - master
 
 update-dependencies:
   stage: update
