🌿 Renovate to innovate

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,6 +55,7 @@ deploy:jdk17-pull-request:
     - master
 
 update-dependencies:
+  image: renovate/renovate
   stage: update
   script:
     - export RENOVATE_CONFIG=$(< renovate.json)
