--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ cache:
 verify:jdk17:
   <<: *verify
 
-deploy:jdk17:
+build:jdk17:
   stage: build
   script:
     - if [ ! -f ci_settings.xml ];
@@ -44,7 +44,7 @@ deploy:jdk17:
   only:
     - master
 
-deploy:jdk17-pull-request:
+build:jdk17-pull-request:
   stage: build
   script:
     - if [ ! -f ci_settings.xml ];
