--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "repositories": ["jesperancinha/favourite-lyrics-app"],
-  "platform": "gitlab"
+  "platform": "gitlab",
+  "extends": ["docker:disable"]
 }
