🌿 Surefire plugin and integration test fix

--- a/favourite-lyrics-starter/src/main/resources/application-docker.properties
+++ b/favourite-lyrics-starter/src/main/resources/application-docker.properties
@@ -1,5 +1,5 @@
 # Postgres
-spring.datasource.url=jdbc:postgresql://192.168.0.11:5432/fla?currentSchema=hexadecimal
+spring.datasource.url=jdbc:postgresql://192.168.0.11:5432/fla?currentSchema=hexagonal
 spring.datasource.username=fla
 spring.datasource.password=admin
 spring.sql.init.mode=never
