--- a/favourite-lyrics-starter/src/main/resources/application.properties
+++ b/favourite-lyrics-starter/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/fla?currentSchema=hexadecimal
+spring.datasource.url=jdbc:postgresql://localhost:5432/fla?currentSchema=hexagonal
 spring.datasource.username=fla
 spring.datasource.password=admin
 spring.sql.init.mode=always
