--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,9 @@
                     <groupId>org.jesperancinha.plugins</groupId>
                     <artifactId>omni-coveragereporter-maven-plugin</artifactId>
                     <version>${omni-coveragereporter-maven-plugin.version}</version>
+                    <configuration>
+                        <useCoverallsCount>false</useCoverallsCount>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
