Updates with renovate

--- a/renovate.json
+++ b/renovate.json
@@ -19,6 +19,12 @@
         "@angular/"
       ],
       "automerge": true
-    }
-  ]
+    },
+    {
+      "groupName": "Node Types Group",
+      "matchPackagePrefixes": [
+        "@types"
+      ],
+      "automerge": true
+    }  ]
 }
