--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
         <testcontainers.version>1.17.2</testcontainers.version>
         <springdoc-openapi-ui.version>1.6.9</springdoc-openapi-ui.version>
-        <kotlinx-coroutines-debug.version>1.6.3</kotlinx-coroutines-debug.version>
+        <kotlinx-coroutines-debug.version>1.6.3-native-mt</kotlinx-coroutines-debug.version>
     </properties>
 
     <dependencyManagement>
