--- a/favourite-lyrics-gui/nginx/default.conf
+++ b/favourite-lyrics-gui/nginx/default.conf
@@ -6,12 +6,19 @@ server {
 
     server_name _;
 
-    location / {
-        root   /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html?$args;
+    location /lyrics/ {
+     proxy_pass http://${FLA_BACKEND}:8080;
     }
 
-    location /lyrics/ {
+    location /swagger-ui/ {
+     proxy_pass http://${FLA_BACKEND}:8080;
+    }
+
+    location /v3/api-docs/swagger-config/ {
+     proxy_pass http://${FLA_BACKEND}:8080;
+    }
+
+    location /v3/api-docs/ {
      proxy_pass http://${FLA_BACKEND}:8080;
     }
 
