--- a/favourite-lyrics-starter/src/main/resources/application.properties
+++ b/favourite-lyrics-starter/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8080
 # Postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/fla?currentSchema=hexagonal
 spring.datasource.username=fla
@@ -10,3 +11,6 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 # Flyway
 spring.flyway.enabled=false
+springdoc.show-actuator=true
+server.forward-headers-strategy=framework
+fla.server.url=http://localhost:${server.port}
