--- a/favourite-lyrics-gui/package.json
+++ b/favourite-lyrics-gui/package.json
@@ -3,22 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^14.0.0",
-    "@types/jest": "^28.0.0",
-    "@types/node": "^18.0.0",
-    "@types/react": "^18.0.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.1",
+    "@types/jest": "^28.1.4",
+    "@types/node": "^18.0.3",
+    "@types/react": "^18.0.15",
     "@types/react-cache": "^2.0.1",
-    "@types/react-dom": "^18.0.0",
-    "axios": "^0.27.0",
-    "react": "^18.0.0",
+    "@types/react-dom": "^18.0.6",
+    "axios": "^0.27.2",
+    "postcss-normalize": "^10.0.1",
+    "react": "^18.2.0",
     "react-async": "^10.0.1",
     "react-cache": "^2.0.0-alpha.1",
-    "react-dom": "^18.0.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.1.2",
-    "web-vitals": "^2.0.0"
+    "typescript": "^4.7.4",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
