--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -132,6 +132,9 @@ coverage:
     - master
   needs:
     - build
+    - favorite-lyrics-electron-e2e
+    - favorite-lyrics-firefox-e2e
+    - favorite-lyrics-chrome-e2e
 
 reporting:
   image: maven:3.8-openjdk-17-slim
