--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,7 @@ verify:jdk17:
 
 before_script:
   - apt-get update -y && apt-get install build-essential -y
+  - apk add --no-cache docker-compose
 
 build:
   image: maven:3.8-openjdk-17-slim
