--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,7 @@ verify:jdk17:
 
 before_script:
   - apt-get update -y
+  - apt-get install -y npm
   - npm install --global yarn
   - apt-get install build-essential -y
   - apt-get install -y docker-compose
