--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,6 +43,7 @@ before_script:
   - apt-get update -y
   - apt-get install -y npm
   - npm install --global yarn
+  - curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
   - nvm install --lts
   - apt-get install build-essential -y
   - apt-get install -y docker-compose
