--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,6 +45,7 @@ before_script:
   - npm install --global yarn
   - curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
   - export NVM_DIR="$HOME/.nvm"
+  - export PATH="PATH:$NVM_DIR"
   - nvm install --lts
   - apt-get install build-essential -y
   - apt-get install -y docker-compose
