--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,6 +48,7 @@ before_script:
   - nvm install --lts
   - apt-get install build-essential -y
   - apt-get install -y docker-compose
+  - apt install xvfb -y
 
 build:
   image: maven:3.8-openjdk-17-slim
