--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,6 +49,8 @@ before_script:
   - apt-get install build-essential -y
   - apt-get install -y docker-compose
   - apt-get install libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb -y
+  - apt-get install chrome
+  - apt-get install firefox
 
 build:
   image: maven:3.8-openjdk-17-slim
