--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,7 +53,9 @@ before_script:
   - apt-get install -y fonts-liberation
   - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
   - dpkg -i google-chrome-stable_current_amd64.deb
-  - apt-get install firefox
+  - wget -O ~/FirefoxSetup.tar.bz2 "https://download.mozilla.org/?product=firefox-latest&os=linux64"
+  - tar xjf ~/FirefoxSetup.tar.bz2 -C /opt/
+  - ln -s /opt/firefox/firefox /usr/lib/firefox/firefox
 
 build:
   image: maven:3.8-openjdk-17-slim
