--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -174,6 +174,7 @@ reporting:
     - favorite-lyrics-electron-e2e
     - favorite-lyrics-firefox-e2e
     - favorite-lyrics-chrome-e2e
+    - favorite-lyrics-edge-e2e
 
 update-dependencies:
   image: renovate/renovate
