--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,6 +39,11 @@ cache:
 verify:jdk17:
   <<: *verify
 
+before_script:
+  - apt-get update -y
+  - apt-get install build-essential -y
+  - apt-get install -y docker-compose
+
 build:
   image: maven:3.8-openjdk-17-slim
   stage: build
